Add custom legend

--- a/src/App.less
+++ b/src/App.less
@@ -29,6 +29,11 @@ div.ant-card-head {
   border-bottom: 1px solid @background-color;
 }
 
+.ant-btn.ant-btn-dashed.ant-btn-sm {
+  padding-bottom: 1px;
+  margin: 2px;
+}
+
 // Custom
 .card,
 div.ant-card {
@@ -43,5 +48,26 @@ div.ant-card {
   padding: 0 20px;
   h1 {
     margin: 0;
+  }
+}
+
+.legendColor {
+  height: 12px;
+  width: 12px;
+  margin-right: 3px;
+  border-radius: 3px;
+  position: relative;
+  top: 1px;
+}
+
+.center {
+  text-align: center;
+}
+
+.Status {
+  margin: 64px 0;
+  font-size: 18px;
+  .anticon {
+    margin-right: 4px;
   }
 }
