--- a/src/App.less
+++ b/src/App.less
@@ -60,8 +60,39 @@ div.ant-card {
   top: 1px;
 }
 
+button.legendHidden,
+button.legendHidden:focus {
+  color: rgba(0, 0, 0, 0.25);
+  background-color: #f5f5f5;
+  border-color: #d9d9d9;
+  text-shadow: none;
+  box-shadow: none;
+  span {
+    text-decoration: line-through;
+  }
+}
+
 .center {
   text-align: center;
+}
+
+.floatRight {
+  float: right;
+}
+
+.contentTab {
+  .ant-card-body {
+    padding: 0;
+  }
+  .Chart {
+    padding: 24px;
+  }
+}
+
+.Legend {
+  p {
+    margin-top: 20px;
+  }
 }
 
 .Status {
