--- a/src/App.less
+++ b/src/App.less
@@ -7,7 +7,8 @@
 h1,
 h2,
 h3,
-.ant-card-head-title {
+.ant-card-head-title,
+.ant-collapse-header {
   // font-family: @header-font;
   font-weight: bolder;
   text-transform: uppercase;
@@ -25,6 +26,10 @@ h3,
   padding: 46px 0;
 }
 
+.ant-layout-footer {
+  padding: 24px 0;
+}
+
 div.ant-card-head {
   border-bottom: 1px solid @background-color;
 }
@@ -32,6 +37,13 @@ div.ant-card-head {
 .ant-btn.ant-btn-dashed.ant-btn-sm {
   padding-bottom: 1px;
   margin: 2px;
+}
+
+.ant-collapse-header {
+  padding-left: 14px !important;
+  i {
+    left: 0 !important;
+  }
 }
 
 // Custom
@@ -87,6 +99,10 @@ button.legendHidden:focus {
   .Chart {
     padding: 24px;
   }
+}
+
+.ant-card.inlineCard {
+  display: inline-block;
 }
 
 .Legend {
