--- a/src/App.less
+++ b/src/App.less
@@ -78,14 +78,14 @@ div.ant-card {
     position: absolute;
     content: 'BETA';
     padding: 2px 6px;
-    top: -9px;
+    top: -7px;
     right: -22px;
     height: auto;
     line-height: initial;
     color: white;
     background: @primary-5;
     border: 1px solid @primary-7;
-    border-radius: 6px;
+    border-radius: 8px;
   }
 }
 
@@ -167,6 +167,11 @@ button.legendHidden:focus {
   margin-top: 16px;
   p {
     margin-top: 24px;
+  }
+
+  button.ant-btn {
+    border: none;
+    box-shadow: none;
   }
 }
 
