Add cookie popup

--- a/src/App.less
+++ b/src/App.less
@@ -159,6 +159,10 @@ button.legendHidden:focus {
   }
 }
 
+.Cookie .ant-notification-notice-message {
+  display: none;
+}
+
 .ant-card.inlineCard {
   display: inline-block;
 }
