--- a/src/App.less
+++ b/src/App.less
@@ -19,7 +19,7 @@ h3,
 }
 
 .ant-layout-content {
-  padding: 46px 0;
+  padding: 24px 0;
 }
 
 .ant-layout-footer {
@@ -177,6 +177,15 @@ button.legendHidden:focus {
     border: none;
     box-shadow: none;
   }
+}
+
+.HunterBanner {
+  margin: 8px 0 16px 0;
+  padding: 8px;
+  padding-left: 12px;
+  background: lighten(#ea532a, 41%);
+  border: 1px solid #ea532a;
+  border-radius: 8px;
 }
 
 .Status {
