--- a/src/App.less
+++ b/src/App.less
@@ -98,6 +98,30 @@ div.ant-card {
   top: 1px;
 }
 
+.legendListItem {
+  div {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+  }
+
+  .legendTag {
+    margin: 0 5px;
+    padding: 2px 3px;
+    cursor: pointer;
+    color: white;
+    font-weight: bold;
+    font-size: 10px;
+    border-radius: 3px;
+    position: relative;
+    top: -1px;
+    &.legendHidden {
+      text-decoration: line-through;
+      background: lightgray !important;
+    }
+  }
+}
+
 button.legendHidden,
 button.legendHidden:focus {
   color: rgba(0, 0, 0, 0.25);
